# A-Maze-ing

./: Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  output_maze.txt  pyproject.toml  readme.md
mazegen/: generator.py
